backends/foundation_macros/tests/trybuild/fail/wasm_entrypoint_on_struct.rs
use foundation_macros::wasm_entrypoint;

#[wasm_entrypoint(name = "bad", desc = "wrong")]
struct NotAFunction;

fn main() {}
