backends/foundation_macros/tests/trybuild/fail/wasm_entrypoint_on_struct.stderr
error: wasm_entrypoint can only be applied to functions
 --> tests/trybuild/fail/wasm_entrypoint_on_struct.rs:3:1
  |
3 | #[wasm_entrypoint(name = "bad", desc = "wrong")]
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  |
  = note: this error originates in the attribute macro `wasm_entrypoint` (in Nightly builds, run with -Z macro-backtrace for more info)
